# crp8_segmentation

./: README.md  Workflow.md
R/: Summarize_segmentations.R  arara.R  ararav2.R  capivara_seg.R  optics_seg.R  toy_seg.R
R/Script_Figures/: composite_JWST.R
R/Segmentantion_functions/: photoseg.R  segment_hdbscan.R
R/regions_fits/: parent_002.fits  parent_004.fits
R/utils/: GPA.R  RegionPhotometry.R  SumFlux.R  build_features.R  compact_labels.R  fill_holes_per_label.R  filter_by_size.R  find_flux_centroids.R  le_energy_map.R  make_rgb.R  mask_cube.R  paint_property.R  pca_energy_map.R  umap_energy_map.R
SEDfitting/: flux_wide_capivara_reg1_logMlogZ.csv  flux_wide_wavelet_reg1_logMlogZ.csv
SegmentationMethods/: README.md  pyproject.toml  setup.py
SegmentationMethods/copula/: copula_segmentation.py
SegmentationMethods/sereias/: README.txt  __init__.py  demo_sereias.ipynb  sereias.py
SegmentationMethods/sereias/data/: datacube_reg1_segmentationmap.fits
SegmentationMethods/sereias/notebooks/: demo_sereias.ipynb  development_sereias.ipynb
Segmented_regions/Copula/: datacube_reg1_regions.csv
Segmented_regions/Rafael/: parent_003.fits  parent_003_mask.fits  parent_004_mask.fits
data/: datacube_reg2.fits
data/raw/: datacube_reg2.fits  datacube_reg4.fits  datacube_reg5.fits  datacube_reg6.fits  datacube_reg7.fits  datacube_reg8.fits
data/regions_fits/: parent_001.fits  parent_001_mask.fits  parent_002_mask.fits  (+7 more)
outdir/: flux_wide_capivara_reg1.csv  flux_wide_wavelets_reg1.csv
sed_maps/: logM.fits  logM_wavelet.fits  logZ.fits  logZ_wavelet.fits
(+14 files in other folders)
